# arrayfire-ml

./: .gitignore  AFBuildMacros.cmake  CMakeLists.txt  LICENSE  README.md
examples/: Activations.cpp  CMakeLists.txt  FFNet.cpp  Node.cpp  Weights.cpp  alexnet.cpp  autograd.cpp  perceptron.cpp  xor.cpp
examples/googlenet/: googlenet.cpp
include/: afml.h
include/af/: autograd.h  nn.h  optim.h
include/af/autograd/: Functions.hpp  Grad.hpp  Variable.hpp
include/af/nn/: Activations.hpp  Init.hpp  Modules.hpp  Networks.hpp  Nodes.hpp  Types.hpp  Weights.hpp  common.hpp
include/af/nn/Activations/: Activation.hpp  ReLU.hpp  Sigmoid.hpp  Tanh.hpp  Threshold.hpp
include/af/nn/Modules/: Activations.hpp  Container.hpp  Conv2D.hpp  Convolve2.hpp  Dropout.hpp  Linear.hpp  Loss.hpp  Module.hpp
include/af/nn/Networks/: FFNet.hpp
include/af/nn/Nodes/: Linear.hpp  Node.hpp
include/af/optim/: Optimizers.hpp
include/afml/: .gitignore  afml.hpp  common.hpp  container.hpp  io.hpp  nn.h  node.hpp  nodes.hpp  parallel.hpp
include/afml/nn/: Activations.hpp  Networks.hpp  Node.hpp  Nodes.hpp  Weights.hpp
include/afml/nn/Activations/: Activation.hpp  ReLU.hpp  Sigmoid.hpp  Tanh.hpp  Threshold.hpp
include/afml/nn/Networks/: FFNet.hpp
include/afml/nn/Nodes/: LSTM.hpp  Linear.hpp  Node.hpp
include/afml/nodes/: common_nodes.hpp  convolution_nodes.hpp  data_nodes.hpp  elementwise_nodes.hpp  loss_nodes.hpp
include/afml/util/: common.hpp
src/autograd/: Functions.cpp  Variable.cpp
src/nn/: Init.cpp  Types.cpp
src/nn/Modules/: Activations.cpp  Container.cpp  Conv2D.cpp  Convolve2.cpp  Dropout.cpp  Linear.cpp  Loss.cpp  Module.cpp
src/optim/: Optimizers.cpp
test/: Activations.cpp  FFNet.cpp  Node.cpp  Weights.cpp  perceptron.cpp
tests/: CMakeLists.txt  test_autograd.cpp  test_loss.cpp
thrift/: afml.thrift  gen_thrift.sh
